--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cheerio",
+  "name": "cypress-cheerio",
   "version": "1.0.0-rc.10",
   "description": "Tiny, fast, and elegant implementation of core jQuery designed specifically for the server",
   "author": "Matt Mueller <mattmuelle@gmail.com>",
